--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     column-gap: 2rem;
+    row-gap: 2rem;
 }
 
 .frame {
@@ -44,6 +45,7 @@ body {
     width: 569px;
     border-radius: 0.5rem;
     overflow: hidden;
+    flex-grow: 1;
 }
 
 .frame img {
@@ -58,11 +60,12 @@ body {
     border-radius: 0.5rem;
     background-color: #FFFFFF;
     overflow: hidden;
+    flex-grow: 1;
 }
 
 .tabs-options-wrapper {
     height: 50px;
-    width: 569px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
